# psyscaling

./: LICENSE  LICENSE.txt  README.md  setup.cfg  setup.py
dict/: sensdict.csv
psyscaling/: myfunction4.py  test.py
psyscaling/imganalysis/: img_cluster.py  test2.py
psyscaling/textanalysis/: countdict.py  test.py  test1.py
