[metadata]
name = psyscaling
version = 0.0.1
author = Svetlana Morozova
description = Psychological scaling of text and graphic information.
long_description = Psychological scaling of text and graphic information. Used to prepare experimental data for quantitative analysis.
url = https://github.com/svmpsy/psyscaling.git
keywords = test
[options]
python_requires = >=3.7, <4
install_requires = 
    pymorphy2, nltk
[options.extras_require]
